--- a/src/utils/Button.css
+++ b/src/utils/Button.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     border-width: 1px;
-    margin: auto;
+    /* font-size: 16px; */
+    /* margin: auto; */
     padding: 8px;
     cursor: pointer;
     transition: background-color 0.4s ease; 
