--- a/src/utils/Button.css
+++ b/src/utils/Button.css
@@ -5,7 +5,7 @@
     border-width: 1px;
     /* font-size: 16px; */
     /* margin: auto; */
-    padding: 8px;
+    padding: 8px 16px;
     cursor: pointer;
     transition: background-color 0.4s ease; 
 }
