--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: var(--color-bg-theme);
+  background-color: var(--color-bg-theme) !important;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
