root default remove

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: var(--color-bg-theme) !important;
+  background-color: var(--color-bg-theme);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -69,8 +69,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    
   }
   a:hover {
     color: #747bff;
