--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,19 @@
 .read-the-docs {
   color: #888;
 }
+
+@media (max-width: 768px) {
+  #root {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .heroContainer,
+  .aboutContainer,
+  .projectContainer,
+  .contactsContainer {
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+}
