--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --color-primary-bg: #ABB2BF33;
   --color-highlight-bg: #C778DD33;
   --color-header: #FFFFFF;
-  --color-bg-theme: #1E1E1E;
+  --color-bg-theme: #282C33;
 }
 
 :root {
